--- a/EX-04/index.html
+++ b/EX-04/index.html
@@ -6,6 +6,27 @@
     <title>Exercício 4</title>
 </head>
 <body>
-    
+    <form method="POST" action="processar.php">
+        <fieldset>
+            <legend>Dados Pessoais</legend>
+
+            <label for="nome">Nome Completo:</label>
+            <input type="email" id="nome" name="nome" required>
+
+            <br><br>
+
+            <label for="email">Email:</label>
+            <input type="email" id="email" name="email" required>
+
+            <br><br>
+
+            <label for="idade">Idade:</label>
+            <input type="number" id="idade" name="idade" min="18" max="120">
+
+            <br><br>
+
+            <label for="senha">Senha:</label>
+            <input type="password" id="senha" name="senha" required>
+        </fieldset>
 </body>
 </html>
