--- a/EX-04/index.html
+++ b/EX-04/index.html
@@ -28,5 +28,21 @@
             <label for="senha">Senha:</label>
             <input type="password" id="senha" name="senha" required>
         </fieldset>
-</body>
+
+        <br><br>
+
+        <fieldset>
+            <legend>Termos</legend>
+            <label for="termos">
+                <input type="checkbox" id="termos" name="termos" required>
+                Aceito os temos de serviço
+            </label>
+        </fieldset>
+
+        <br><br>
+
+        <button type="submit">Cadastrar</button>
+        <button type="reset">Limpar</button>
+    
+    </body>
 </html>
