--- a/EX-05/tabela.html
+++ b/EX-05/tabela.html
@@ -101,23 +101,23 @@
 
             <legend>Dados do seu time</legend>
 
-            <label for="nome">Nome Completo:</label>
+            <label for="nome">Qual seu time:</label>
             <input type="email" id="nome" name="nome" required>
 
             <br><br>
 
-            <label for="email">Email:</label>
+            <label for="email">Seu time tem mundial:</label>
             <input type="email" id="email" name="email" required>
 
             <br><br>
 
-            <label for="idade">Idade:</label>
+            <label for="idade">Quantos times brasileiro seu time possui:</label>
             <input type="number" id="idade" name="idade" min="18" max="120">
 
             <br><br>
 
-            <label for="senha">Senha:</label>
-            <input type="password" id="senha" name="senha" required>
+            <label for="senha">Deixe seu comentário:</label>
+            <input type="text" id="text" name="text" required>
         </fieldset>
 
         <br><br>
@@ -132,7 +132,50 @@
 
         <br><br>
 
-        <button>Enviar</button>
+        <fieldset>
+            <legend>Estou feliz</legend>
+            <label for="termos">
+                <input type="checkbox" id="termos" name="termos" required>
+                Sou Feliz
+            </label>
+
+            <label for="termos">
+                <input type="checkbox" id="termos" name="termos" required>
+                Não sou feliz
+            </label>
+
+            <label for="termos">
+                <input type="checkbox" id="termos" name="termos" required>
+                Sou muito alegre
+            </label>
+        </fieldset>
+
+        <fieldset>
+            <legend>Pagamento</legend>
+            <label for="termos">
+                <input type="checkbox" id="termos" name="termos" required>
+                Cartão de Crédito
+            </label>
+
+            <label for="termos">
+                <input type="checkbox" id="termos" name="termos" required>
+                Cartão de Debito
+            </label>
+
+            <label for="termos">
+                <input type="checkbox" id="termos" name="termos" required>
+                Pix
+            </label>
+
+            <label for="termos">
+                <input type="checkbox" id="termos" name="termos" required>
+                Vale Bombom
+            </label>
+        </fieldset>
+
+        <br><br>
+
+        <button type="submit">Enviar</button>
 
 </body>
 </html>
